# reolink-python-api

./: .gitignore  CHANGELOG.md  ppmgr.sh  pyproject.toml  tox.ini
admin/: .admin-config.yaml  admin-commands.sh
reolink_api/: APIHandler.py  ConfigHandler.py  RtspClient.py  __init__.py  alarm.py  device.py  display.py  image.py  motion.py  network.py  ptz.py  recording.py  resthandle.py  system.py  user.py  util.py  zoom.py
tests/: test_camera.py
