[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "reolink_api"
version = '1.1.2'
description = "Unofficial Reolink API fork for personal use in Python 3.10+"
authors = ["bobrock <bobrock@tuta.io>"]
license = "GPL-3.0"
readme = 'README.md'
repository = 'https://github.com/barretobrock/reolink-python-api'
packages = [
    { include = 'reolink_api' },
]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = ">=3.10"
Pillow = ">=9"
PySocks = ">=1"
PyYAML = "^6.0"
loguru = ">=0.6"
numpy = "^2"
opencv-python = "^4"
requests = ">=2.32.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3"
pytest = "^8"
pytest-cov = "^6"
flake8 = "^7"
tox = "^4"

[tool.poetry.extras]
test = ["pytest"]
